[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentclass"
version = "0.0.4"
description = "AgentClass"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "agentmodel@git+https://github.com/bitovi/dependabot-py-test-dep.git@0.1.0#egg=agentmodel",
]
